fix align logo with text

--- a/src/styles/general.less
+++ b/src/styles/general.less
@@ -154,8 +154,10 @@ input {
   .summit-info{
     display: flex;
     height: 100%;
+    align-items: center;
     img {
       height: 100%;
+      width: auto;
       margin-right: 10px;
     }
     h4 {
